fix モーダルを隠してしまうのでz-indexを削除 #113

--- a/src/assets/scss/Header.module.scss
+++ b/src/assets/scss/Header.module.scss
@@ -8,7 +8,6 @@
   align-items: center;
   background-color: #198eb9;
   padding: 0.8rem 1.6rem;
-  z-index: 10;
 
   button {
     padding: 0;
